--- a/templates/system/footer.html.twig
+++ b/templates/system/footer.html.twig
@@ -10,7 +10,7 @@
         </div>
         <div class="footer__menu">
         {# demo menu #}
-            {{ page_footer_menu }}
+            <!-- Placeholder for copyright -->
         </div>
         <div class="footer__bottom-menu">
             <div class="footer__copyright col-md-6">
@@ -22,7 +22,7 @@
                     <li class="leaf"><a href="/impressum" title="Impressum anzeigen">Impressum</a></li>
                     <li class="leaf"><a href="/netiquette" title="Netiquette">Netiquette</a></li>
                     <li class="last leaf"><a href="/datenschutzhinweise" title="Datenschutz anzeigen">Datenschutz</a></li>
-                </ul>        
+                </ul>
             </div>
         </div>
     </footer>
